apps/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
        - image: linuxserver/bazarr:latest
          imagePullPolicy: Always
          name: bazarr
          resources:
            requests:
              cpu: "10m"
              memory: "200Mi"
          volumeMounts:
            - name: bazarr-config
              mountPath: /config
            - name: bazarr-array
              mountPath: /movies
              subPath: Videos/Movies
            - name: bazarr-array
              mountPath: Videos/Shows
      volumes:
        - name: bazarr-config
          hostPath:
            path: /home/hubbe/services/bazarr
        - name: bazarr-array
          persistentVolumeClaim:
            claimName: array
