apps/bazarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bazarr
spec:
  selector:
    matchLabels:
      app: bazarr
  serviceName: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
        - image: ghcr.io/linuxserver/bazarr:version-v1.6.2
          imagePullPolicy: Always
          name: bazarr
          ports:
            - containerPort: 6767
              name: http
          readinessProbe:
            httpGet:
              path: /login/
              port: 6767
            initialDelaySeconds: 5
            periodSeconds: 15
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 250m
              memory: 1024Mi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: config
              mountPath: /config
            - name: movies
              mountPath: /movies
            - name: shows
              mountPath: /tv
      volumes:
        - name: movies
          persistentVolumeClaim:
            claimName: nfs-videos-movies
        - name: shows
          persistentVolumeClaim:
            claimName: nfs-videos-shows
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
        storageClassName: longhorn
