apps/bazarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    traefik.ingress.kubernetes.io/router.middlewares: traefik-https-redirect@kubernetescrd,traefik-authelia-forwardauth@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls.options: traefik-tls@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - bazarr.hubbe.club
      secretName: bazarr-cert
  rules:
    - host: bazarr.hubbe.club
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr
                port:
                  number: 6767
